File browser back button doesn't work from inside Blend file #48741

Closed
opened 2016-06-26 20:37:25 +02:00 by Duarte Farrajota Ramos · 6 comments

System Information
Windows 7 64bits GTX980 + GTX580

Blender Version
Broken: 2.77 and current snapshots from buildbot

Short description of error
The file browser back button "Move to Previous Folder" doesn't work when browsing inside a Blender file for the various datablocks (Groupm, Object, Scene Materail etc.)
It works fine again when leaving inside the Blend file and in normal file-system directory

Exact steps for others to reproduce the error

  • File > Link
  • Browse to any Blender file
  • Enter blend file to browse for data blocks (any will do)
  • Once inside the Blend file the Move to Previous Folder and Move to Next Folder don't work.
  • Once back in a regular file system folder they will work again.
**System Information** Windows 7 64bits GTX980 + GTX580 **Blender Version** Broken: 2.77 and current snapshots from buildbot **Short description of error** The file browser back button "Move to Previous Folder" doesn't work when browsing inside a Blender file for the various datablocks (Groupm, Object, Scene Materail etc.) It works fine again when leaving inside the Blend file and in normal file-system directory **Exact steps for others to reproduce the error** - File > Link - Browse to any Blender file - Enter blend file to browse for data blocks (any will do) - Once inside the Blend file the *Move to Previous Folder* and *Move to Next Folder* don't work. - Once back in a regular file system folder they will work again.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @DuarteRamos

Added subscriber: @DuarteRamos
Bastien Montagne self-assigned this 2016-06-26 23:26:02 +02:00

Filebrowser is actually a bit disturbed by library 'paths' and its virtual folders… Other things, like typing valid 'library directory' in header also fails.

Filebrowser is actually a bit disturbed by library 'paths' and its virtual folders… Other things, like typing valid 'library directory' in header also fails.

True, I can also confirm that, typing something like path\to\some\blend_file-blend\Lamp\ or path\to\some\blend_file-blend\Groups\ prompts the user to "create new folder ?" but then fails.
It never navigates to the desired "virtual datablock folder".

Anyway, not sure if this is really a bug or just a limitation of the current system

True, I can also confirm that, typing something like path\to\some\blend_file-blend\Lamp\ or path\to\some\blend_file-blend\Groups\ prompts the user to "create new folder ?" but then fails. It never navigates to the desired "virtual datablock folder". Anyway, not sure if this is really a bug or just a limitation of the current system

This issue was referenced by 5f77266baf

This issue was referenced by 5f77266baf20c68befcd2dcffeed67b665f8ccc5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48741
No description provided.